# pydhcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dhcpd.py  listener.py  mkdocs.yml  pyproject.toml  test.py
.github/workflows/: release.yml  test.yml
benchmarks/: README.md  bench_options.py  bench_parse.py  run.py
docs/: api.md  deployment.md  examples.md  faq.md  index.md  options.md  troubleshooting.md
examples/: capture.py  client.py  dhcpd.py  listener.py
lib/pydhcp/: __init__.py  _options.py  _utils.py  contants.py  listener.py  message.py  netutils.py  options.py  optiontype.py  server.py
lib/pydhcp/enum/: __init__.py  _optioncode_types.py  messagetype.py  optioncode.py
lib/pydhcp/iana/: __init__.py  _optiontypes.py  hardwaretype.py  messagetype.py  options.py
src/pydhcp/: AGENTS.md  __init__.py  _options.py  _platform_utils.py  _utils.py  capture.py  ccc.py  cli.py  client.py  config.py  constants.py  lease.py  listener.py  log.py  message.py  metrics.py  netutils.py  options.py  optiontype.py  relay.py  server.py  structured.py
src/pydhcp/enum/: __init__.py  _optioncode_types.py  messagetype.py  optioncode.py
src/pydhcp/network/: AGENTS.md  __init__.py
src/pydhcp/options/: AGENTS.md  __init__.py  base.py  ccc.py  code.py  registry.py
src/pydhcp/options/type/: __init__.py  base.py  mos.py  net.py  scalar.py  vendor.py
src/pydhcp/packet/: AGENTS.md  __init__.py  enums.py  message.py  structured.py
tests/: test_async.py  test_async_concurrency.py  test_basic.py  test_bench_options.py  test_bench_parse.py  test_capture.py  test_cli.py  test_client.py  test_config.py  test_lease_backend.py  test_listener_listen_specs.py  test_malformed_packets.py  test_message.py  test_option_types.py  test_options.py  test_permissions.py  test_platform_interfaces.py  test_property_roundtrip.py  test_relay.py  test_rfc_compliance.py  test_server_customization.py  test_structured_packet.py
tests/integration/: test_dora.py  test_relay_dora.py
