[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydhcp"
version = "0.1.0"
authors = [{ name = "jose-pr" }]
description = "A Python DHCP library and server implementation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
pydhcp = "pydhcp.cli:main"

[project.optional-dependencies]
dev = ['build', 'twine', 'hatchling', 'pytest']
docs = ['mkdocs', 'mkdocs-material', 'mkdocstrings[python]']

[project.urls]
Homepage = "https://github.com/jose-pr/pydhcp/"
Documentation = "https://jose-pr.github.io/pydhcp/"
Issues = "https://github.com/jose-pr/pydhcp/issues"

[tool.hatch.build.targets.sdist]
exclude = ["/.*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
# Since it is a library, make sure it is fully type checked

