[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydhcp"
version = "0.4.0"
authors = [{ name = "jose-pr" }]
description = "A Python DHCP library and server implementation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "PyYAML>=6.0",
    "netimps>=0.0.1",
]

[project.scripts]
pydhcp = "pydhcp.cli:main"

[project.optional-dependencies]
dev = ['build', 'twine', 'hatchling', 'mypy', 'pip-audit', 'pytest', 'pytest-cov', 'hypothesis>=6.100']
docs = ['mkdocs', 'mkdocs-material', 'mkdocstrings[python]']
toml = ['tomli-w>=1.2.0', 'tomli>=2.4.0; python_version < "3.11"']

[project.urls]
Homepage = "https://github.com/jose-pr/pydhcp/"
Documentation = "https://jose-pr.github.io/pydhcp/"
Issues = "https://github.com/jose-pr/pydhcp/issues"


# Ship the consumer-facing docs inside the installed package, so they are
# readable from site-packages via importlib.resources without the repo.
# src/pydhcp/AGENTS.md is included automatically by living in the package
# dir; the repo-root AGENTS.md is development-only and deliberately not
# shipped.
[tool.hatch.build.targets.wheel.force-include]
"README.md" = "pydhcp/README.md"

[tool.hatch.build.targets.sdist]
exclude = ["/.*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
# Since it is a library, make sure it is fully type checked
